--- a/apps/backend/src/assets/templates/course-completion.ejs
+++ b/apps/backend/src/assets/templates/course-completion.ejs
@@ -269,10 +269,10 @@
                                                                     <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:97px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#2cac33"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Tahoma, sans-serif; font-size:16px"><![endif]-->
                                                                     <div
                                                                         style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#2cac33;border-radius:4px;width:auto;border-top:1px solid #2cac33;font-weight:400;border-right:1px solid #2cac33;border-bottom:1px solid #2cac33;border-left:1px solid #2cac33;padding-top:5px;padding-bottom:5px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;">
-                                                                        <span
+                                                                        <a href="https://www.lumenlms.xyz/courses/<%=course?.courseId%>"
                                                                             style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span
                                                                                 dir="ltr"
-                                                                                style="word-break: break-word; line-height: 32px;">Review</span></span>
+                                                                                style="word-break: break-word; line-height: 32px;">Review</span></a>
                                                                     </div>
                                                                     <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                                                 </div>
