--- a/apps/backend/src/assets/templates/course-enrollment.ejs
+++ b/apps/backend/src/assets/templates/course-enrollment.ejs
@@ -266,7 +266,7 @@
 															<td class="pad" style="text-align:center;padding-top:15px;">
 																<div class="alignment" align="center">
 																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:76px;width:235px;v-text-anchor:middle;" arcsize="20%" stroke="false" fillcolor="#2cac33"><w:anchorlock/><v:textbox inset="15px,0px,0px,0px"><center style="color:#ffffff; font-family:Tahoma, sans-serif; font-size:23px"><![endif]-->
-																	<a href="https://www.lumenlms.xyz/student/<%=course?.course_id%>/material"><div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#2cac33;border-radius:15px;width:auto;border-top:1px solid #2cac33;font-weight:400;border-right:1px solid #2cac33;border-bottom:1px solid #2cac33;border-left:1px solid #2cac33;padding-top:15px;padding-bottom:15px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:35px;padding-right:20px;font-size:23px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 46px;"><strong>Start The Course</strong></span></span></div></a>
+																	<a href="https://www.lumenlms.xyz/student/<%=course?.course_id%>"><div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#2cac33;border-radius:15px;width:auto;border-top:1px solid #2cac33;font-weight:400;border-right:1px solid #2cac33;border-bottom:1px solid #2cac33;border-left:1px solid #2cac33;padding-top:15px;padding-bottom:15px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:35px;padding-right:20px;font-size:23px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 46px;"><strong>Start The Course</strong></span></span></div></a>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
 															</td>
@@ -317,110 +317,12 @@
 															<td class="pad" style="padding-right:25px;padding-top:15px;text-align:center;">
 																<div class="alignment" align="center">
 																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:58px;width:250px;v-text-anchor:middle;" arcsize="28%" strokeweight="2.25pt" strokecolor="#2CAC33" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#000000; font-family:Tahoma, sans-serif; font-size:16px"><![endif]-->
-																	<div style="text-decoration:none;display:inline-block;color:#000000;background-color:transparent;border-radius:16px;width:auto;border-top:3px solid #2CAC33;font-weight:400;border-right:3px solid #2CAC33;border-bottom:3px solid #2CAC33;border-left:3px solid #2CAC33;padding-top:10px;padding-bottom:10px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:25px;padding-right:25px;font-size:16px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 32px;">Technology and Principles&nbsp;</span></span></div>
+																	<div style="text-decoration:none;display:inline-block;color:#000000;background-color:transparent;border-radius:16px;width:auto;border-top:3px solid #2CAC33;font-weight:400;border-right:3px solid #2CAC33;border-bottom:3px solid #2CAC33;border-left:3px solid #2CAC33;padding-top:10px;padding-bottom:10px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:25px;padding-right:25px;font-size:16px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 32px;"><%=course?.learning_outcome%>&nbsp;</span></span></div>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
 															</td>
 														</tr>
 													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-5" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #e4f2d3; color: #000000; width: 640px;" width="640">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="button_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad" style="padding-right:25px;padding-top:10px;text-align:center;">
-																<div class="alignment" align="center">
-																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:58px;width:392px;v-text-anchor:middle;" arcsize="28%" strokeweight="2.25pt" strokecolor="#2CAC33" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#000000; font-family:Tahoma, sans-serif; font-size:16px"><![endif]-->
-																	<div style="text-decoration:none;display:inline-block;color:#000000;background-color:transparent;border-radius:16px;width:auto;border-top:3px solid #2CAC33;font-weight:400;border-right:3px solid #2CAC33;border-bottom:3px solid #2CAC33;border-left:3px solid #2CAC33;padding-top:10px;padding-bottom:10px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:50px;padding-right:50px;font-size:16px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 32px;">Software Security and Trusted systems&nbsp;</span></span></div>
-																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-6" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #e4f2d3; color: #000000; width: 640px;" width="640">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="button_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad" style="padding-right:25px;padding-top:10px;text-align:center;">
-																<div class="alignment" align="center">
-																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:58px;width:203px;v-text-anchor:middle;" arcsize="28%" strokeweight="2.25pt" strokecolor="#2CAC33" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#000000; font-family:Tahoma, sans-serif; font-size:16px"><![endif]-->
-																	<div style="text-decoration:none;display:inline-block;color:#000000;background-color:transparent;border-radius:16px;width:auto;border-top:3px solid #2CAC33;font-weight:400;border-right:3px solid #2CAC33;border-bottom:3px solid #2CAC33;border-left:3px solid #2CAC33;padding-top:10px;padding-bottom:10px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:25px;padding-right:25px;font-size:16px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 32px;">Management Issues&nbsp;</span></span></div>
-																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-7" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #e4f2d3; color: #000000; width: 640px;" width="640">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="button_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad" style="padding-right:30px;padding-top:10px;text-align:center;">
-																<div class="alignment" align="center">
-																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:58px;width:244px;v-text-anchor:middle;" arcsize="28%" strokeweight="2.25pt" strokecolor="#2CAC33" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#000000; font-family:Tahoma, sans-serif; font-size:16px"><![endif]-->
-																	<div style="text-decoration:none;display:inline-block;color:#000000;background-color:transparent;border-radius:16px;width:auto;border-top:3px solid #2CAC33;font-weight:400;border-right:3px solid #2CAC33;border-bottom:3px solid #2CAC33;border-left:3px solid #2CAC33;padding-top:10px;padding-bottom:10px;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:10px;padding-right:10px;font-size:16px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break: break-word; line-height: 32px;">&nbsp;Cryptographic Algorithms</span></span></div>
-																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-8" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #e4f2d3; color: #000000; width: 640px;" width="640">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<div class="spacer_block" style="height:35px;line-height:35px;font-size:1px;">&#8202;</div>
 												</td>
 											</tr>
 										</tbody>
@@ -440,7 +342,7 @@
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;padding-bottom:75px;">
-																<div class="alignment" align="center" style="line-height:10px"><a href="www.example.com" target="_blank" style="outline:none" tabindex="-1"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/847111_831147/editor_images/094a0f5f-2d1e-445e-ac45-11cf641dfbe8.png" style="display: block; height: auto; border: 0; width: 203px; max-width: 100%;" width="203" alt="FIND OUT MORE" title="FIND OUT MORE"></a></div>
+																<div class="alignment" align="center" style="line-height:10px"><a href="https://www.lumenlms.xyz/student/<%=course?.course_id%>/material" target="_blank" style="outline:none" tabindex="-1"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/847111_831147/editor_images/094a0f5f-2d1e-445e-ac45-11cf641dfbe8.png" style="display: block; height: auto; border: 0; width: 203px; max-width: 100%;" width="203" alt="FIND OUT MORE" title="FIND OUT MORE"></a></div>
 															</td>
 														</tr>
 													</table>
