fix(frontend): course status filter 60%

--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -69,3 +69,49 @@ body {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
+
+/* Dropdown button */
+.dropbtn {
+  background-color: #FFFFFF;
+  color: black;
+  padding: 10px;
+  font-size: 16px;
+  border-color: #1dbf7b;
+  border-radius: 4%;
+  cursor: pointer;
+  margin-left: 100%;
+  width: 120px;
+
+}
+
+.dropdown {
+  position: right;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-left: 100%;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #1dbf7b;
+}
